--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-La hora actual es Thu Jan 16 07:23:06 PM CST 2025
+
+<html>
+<head>
+    <title>Mi Página en GitHub Pages</title>
+</head>
+<body>
+    <h1>Hola, mundo!</h1>
+    <p>La hora actual es: 2025-01-17 03:18:41.499527</p>
+</body>
+</html>
