--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
     <title>Mi Página en GitHub Pages</title>
 </head>
 <body>
-    <h1>Data LabMX </h1>
-    <p>La hora actual es: 2025-01-19 23:31:30.770405</p>
-</body>
     <ul class="vertical">
         <li><a href="#Home"><span> AutoMethyc </span></a></li>
         <li><a href="#Base"><span2> Base quality </span2></a></li>
@@ -50,4 +47,8 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/FerAmbriz/AutoMethyc/report/animations.js"></script>
+<div>
+    <h1>Data LabMX </h1>
+    <p>La hora actual es: 2025-01-19 23:42:35.409593</p>
+</div>    
 </html>
